[gd_scene load_steps=11 format=3 uid="uid://c5hgu8miuosw1"]

[ext_resource type="Texture2D" uid="uid://dxknqjnomrrsd" path="res://sprites/background/spaceBackground.png" id="1_nr4qn"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1_sn0oe"]
[ext_resource type="Script" path="res://scripts/ParallaxBackground.gd" id="2_8ny5r"]
[ext_resource type="Script" path="res://scripts/PlayerShip.gd" id="2_j87uu"]
[ext_resource type="Texture2D" uid="uid://dtxgoaeoif7ek" path="res://sprites/ships/Ship2.png" id="3_tava3"]
[ext_resource type="Script" path="res://scripts/EnemySpawner.gd" id="4_2g6xc"]
[ext_resource type="Script" path="res://scripts/ProjectileManager.gd" id="6_pgne7"]
[ext_resource type="PackedScene" uid="uid://0tyuu68wgr76" path="res://scenes/PlayerProjectile.tscn" id="7_mci6s"]
[ext_resource type="PackedScene" uid="uid://d15p556mdugx1" path="res://scenes/EnemyProjectile.tscn" id="8_47bam"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="9_ftg8q"]

[node name="Main" type="Node2D"]
script = ExtResource("1_sn0oe")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_8ny5r")
scroll_speed = 50

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(578.5, 319.5)
scale = Vector2(0.562012, 0.42513)
texture = ExtResource("1_nr4qn")

[node name="PlayerShip" type="Area2D" parent="."]
position = Vector2(620, 523)
script = ExtResource("2_j87uu")

[node name="Sprite2D" type="Sprite2D" parent="PlayerShip"]
rotation = 1.5708
texture = ExtResource("3_tava3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip"]

[node name="Muzzle" type="Marker2D" parent="PlayerShip"]

[node name="FireRateTimer" type="Timer" parent="PlayerShip"]

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(627, 63)
script = ExtResource("4_2g6xc")

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]

[node name="ProjectileManager" type="Node2D" parent="."]
script = ExtResource("6_pgne7")

[node name="PlayerProjectile" parent="ProjectileManager" instance=ExtResource("7_mci6s")]

[node name="EnemyProjectile" parent="ProjectileManager" instance=ExtResource("8_47bam")]

[node name="PowerUpManager" type="Node2D" parent="."]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("9_ftg8q")

[node name="UI" type="CanvasLayer" parent="."]

[connection signal="timeout" from="PlayerShip/FireRateTimer" to="PlayerShip" method="_on_FireRateTimer_timeout"]
